fixed broken link

--- a/hp/WebContent/landing/homepage.html
+++ b/hp/WebContent/landing/homepage.html
@@ -255,8 +255,8 @@
 				<a href="#">Back to top</a>
 			</p>
 			<p>
-				&copy; 2013 Company, Inc. &middot; <a href="#">Privacy</a> &middot;
-				<a href="/terms-of-service.html"> Terms of Service </a>&middot; <a href="contact-us.html"> Contact
+				&copy; 2013 Company, Inc. &middot; <a href="privacy-policy.html">Privacy</a> &middot;
+				<a href="terms-of-service.html"> Terms of Service </a>&middot; <a href="contact-us.html"> Contact
 					Us </a> &middot; <a href="coming-soon.html"> Sign in </a>&middot; <a
 					href="coming-soon.html"> Register </a>&middot; <a href="#"> Home </a>
 			</p>
