added support for opening ext-link in new tab

--- a/hp/WebContent/landing/terms-of-service.html
+++ b/hp/WebContent/landing/terms-of-service.html
@@ -53,7 +53,7 @@
 									<li><a href="about/about/about-security.html">Bitrule Security</a></li>
 									<li><a href="about/about-us.html">About Us</a></li>
 								</ul></li>
-							<li><a href="http://bitcoinity.org/markets">Charts</a></li>
+							<li><a target="_blank" href="http://bitcoinity.org/markets">Charts</a></li>
 							<li><a href="contact-us.html">Conact Us</a></li>
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
