--- a/hp/WebContent/landing/about/about-us.html
+++ b/hp/WebContent/landing/about/about-us.html
@@ -51,7 +51,7 @@
 									<li><a href="about-security.html">Bitrule Security</a></li>
 									<li><a href="about-us.html">About Us</a></li>
 								</ul></li>
-							<li><a href="http://bitcoinity.org/markets">Charts</a></li>
+							<li><a target="_blank" href="http://bitcoinity.org/markets">Charts</a></li>
 							<li><a href="../contact-us.html">Conact Us</a></li>
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
