corrected default contact info

--- a/hp/WebContent/landing/contact-us.html
+++ b/hp/WebContent/landing/contact-us.html
@@ -82,10 +82,9 @@
 			<!-- Default panel contents -->
 			<div class="panel-body text-center" style="background-color: #BAE0FF;">
 				<p><br>
-          <a href="#">Bitrule</a><br>
+          <a href="#">Bitrule LLC 2013</a><br>
           <a href="#">bitrule.com</a><br>
-          ha str hdhdh bla bla bla<br>
-          03-5467893<br>
+          <br>
           joomankay@hotmail.com<br>
           <br></p>
 			</div>
