--- a/hp/WebContent/landing/privacy-policy.html
+++ b/hp/WebContent/landing/privacy-policy.html
@@ -120,9 +120,9 @@ By using this Site, you signify your acceptance of this policy and <a href="/ter
 <b>Contacting us</b><br><br>
 
 If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please contact us at:<br>
-<a href="#">Bitrule</a><br>
+<a href="#">Bitrule LLC 2013</a><br>
 <a href="#">bitrule.com</a><br>
-ha str hdhdh bla bla bla<br>
+<br>
 03-5467893<br>
 joomankay@hotmail.com<br>
 <br>
