--- a/hp/WebContent/landing/terms-of-service.html
+++ b/hp/WebContent/landing/terms-of-service.html
@@ -382,10 +382,9 @@ NEITHER BITRULE NOR ITS AFFILIATES SHALL HAVE ANY RESPONSIBILITY OR LIABILITY FO
 <b>Contacting us</b><br><br>
 
 If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please contact us at:<br>
-<a href="#">Bitrule</a><br>
-<a href="#">bitrule.com</a><br>
-ha str hdhdh bla bla bla<br>
-03-5467893<br>
+<a href="#">Bitrule LLC 2013</a><br>
+<a href="#">bitrule.com</a>
+<br>
 joomankay@hotmail.com<br>
 <br>
 This document was last updated on December 30, 2013<br><br>
