corrected privacy policy link ref

--- a/hp/WebContent/landing/terms-of-service.html
+++ b/hp/WebContent/landing/terms-of-service.html
@@ -401,7 +401,7 @@ This document was last updated on December 30, 2013<br><br>
 
 		<div class="container text-center">			
 			<p>
-				&copy; 2013 Company, Inc. &middot; <a href="#">Privacy</a> &middot;
+				&copy; 2013 Company, Inc. &middot; <a href="privacy-policy.html">Privacy</a> &middot;
 				<a href="terms-of-service.html"> Terms of Service </a>&middot; <a href="contact-us.html"> Contact
 					Us </a> &middot; <a href="coming-soon.html"> Sign in </a>&middot; <a
 					href="coming-soon.html"> Register </a>&middot; <a href="homepage.html"> Home </a>
