Changes to landing page
1. Replaced images with public domain images - from http://pixabay.com.
2. Changed text size of carousel caption.
3. Added logo favicon
4. Added branding on navbar-right + link ref to homepage
5. Changed email to admin@bitrule.com
6. Edited captions in most pages

--- a/hp/WebContent/landing/about/about-bitrule.html
+++ b/hp/WebContent/landing/about/about-bitrule.html
@@ -57,11 +57,11 @@
 								class="icon-bar"></span> <span class="icon-bar"></span> <span
 								class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="#" style="color: White;">Bitrule</a>
+						<a class="navbar-brand" href="../homepage.html"><img style="max-width:90px; margin-top: -15px;" src="../images/logo.jpg"></a>
 					</div>
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav">
-							<li><a href="../HomePage.html">Home</a></li>
+							<li><a href="../homepage.html">Home</a></li>
 							<li class="dropdown"><a href="#" class="dropdown-toggle"
 								data-toggle="dropdown">About <b class="caret"></b></a>
 								<ul class="dropdown-menu" style="background-color: #dddddd;">
@@ -120,7 +120,7 @@
 				<h2>Bitrule is a secure service</h2>
 			</div>
 			<div class="panel-body text-center">
-				<p>Bitrule does not require you to submit any of your personal bitcoin
+				<p>Bitrule does not store any of your personal bitcoin
 					 exchange acount information. Instead Bitrule uses custom
 					API's to place your rules in any of your bitcoin exchange accounts.</p>
 				<p>
@@ -135,9 +135,9 @@
 				<h2>Bitrule over Google Cloud</h2>
 			</div>
 			<div class="panel-body text-center">
-				<p>Bitrule runs over Google Cloud and provides
-					the most reliable service in the market. Even if you loose your
-					network connectivity or suffer power loss or a computer failure,
+				<p>Bitrule runs on Google Cloud and provides
+					the most reliable service in the market. Even if you lose your
+					network connectivity, suffer power loss or a computer failure,
 					Bitrule will be up and running, the same way your email
 					provider is always there for you.</p>
 				<p>
@@ -154,7 +154,7 @@
 			<div class="panel-body text-center">
 				<p>The Bitrule service is delivered to you by a team of seasoned
 					financial and software professionals. The company has vast
-					experience in finance, software dev and crypto currencies.</p>
+					experience in finance, software development and crypto currencies.</p>
 				<p>
 					<a class="btn btn-lg btn-primary" href="about-us.html"
 						role="button">Learn More &raquo;</a>
@@ -167,7 +167,7 @@
 			<li><a href="about-cloud.html">Cloud Service</a></li>
 			<li><a href="about-security.html">Security</a></li>
 			<li><a href="about-us.html">About Us</a></li>
-			<li><a href="../HomePage.html">Home</a></li>
+			<li><a href="../homepage.html">Home</a></li>
 		</ul>
 
 		<!-- FOOTER -->
