--- a/hp/WebContent/landing/about/about-security.html
+++ b/hp/WebContent/landing/about/about-security.html
@@ -54,11 +54,11 @@
 								class="icon-bar"></span> <span class="icon-bar"></span> <span
 								class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="#" style="color: White;">Bitrule</a>
+						<a class="navbar-brand" href="../homepage.html"><img style="max-width:90px; margin-top: -15px;" src="../images/logo.jpg"></a>
 					</div>
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav">
-							<li><a href="../HomePage.html">Home</a></li>
+							<li><a href="../homepage.html">Home</a></li>
 							<li class="dropdown"><a href="#" class="dropdown-toggle"
 								data-toggle="dropdown">About <b class="caret"></b></a>
 								<ul class="dropdown-menu" style="background-color: #dddddd;">
@@ -103,10 +103,12 @@
 			<div class="panel-body text-center">
 				<p>When working in the Bitcoin eco-system, you have to be
 					careful. Bitrule uses API keys of your exchanges, and <b>DOES NOT</b>
-					require any login information. A new API key can be set from the
+					require you to submit your personal exchange login information. A new API key can be set from the
 					"Security Center" panel in your MtGox or Bitstamp or other exchange
-					account. Bitrule does not store or share any of your personal data. Further more, 
-					Bitrule does not allow placing withdrawl orders. We believe that safety comes first.</p>
+					account. Bitrule does not store or share any of your personal data and does not hold
+          any of your bitcoins or hard currency nor does it have direct access to them. 
+          As an added layer of security, Bitrule does not allow withdrawing funds from your
+          exchange accounts. We believe that safety comes first.</p>
 			</div>
 		</div>
 
@@ -118,7 +120,7 @@
 			<li><a href="about-cloud.html">Cloud Service</a></li>
 			<li class="active"><a href="#">Security</a></li>
 			<li><a href="about-us.html">About Us</a></li>
-			<li><a href="../HomePage.html">Home</a></li>
+			<li><a href="../homepage.html">Home</a></li>
 		</ul>
 
 		<!-- FOOTER -->
