--- a/hp/WebContent/landing/coming-soon.html
+++ b/hp/WebContent/landing/coming-soon.html
@@ -13,7 +13,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="shortcut icon" href="/favicon.ico">
+<link rel="shortcut icon" href="favicon.ico">
 
 <title>Bitrule General</title>
 <!-- Bootstrap core CSS -->
@@ -54,7 +54,7 @@
 								class="icon-bar"></span> <span class="icon-bar"></span> <span
 								class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="#" style="color: White;">Bitrule</a>
+							<a class="navbar-brand" href="homepage.html"><img style="max-width:90px; margin-top: -15px;" src="images/logo.jpg"></a>
 					</div>
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav">
