--- a/hp/WebContent/landing/homepage.html
+++ b/hp/WebContent/landing/homepage.html
@@ -57,7 +57,8 @@
 								class="icon-bar"></span> <span class="icon-bar"></span> <span
 								class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="#" style="color: White;">Bitrule</a>
+						<!-- a class="navbar-brand" href="#" style="color: White;"><Bitrule</a -->
+            <a class="navbar-brand" href="#" ><img style="max-width:90px; margin-top: -15px;" src="images/logo.jpg"></a>
 					</div>
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav">
@@ -101,13 +102,13 @@
 		</ol>
 		<div class="carousel-inner">
 			<div class="item active">
-				<img src="images/wood1.jpg" alt="Bitrule Water"
+				<img src="images/orange.jpg" alt="Bitrule Water"
 					class="image-responsive">
 				<div class="container">
 					<div class="carousel-caption">
-						<h1>Manage your Risk</h1>
+						<h0>Manage your Risk</h0>
 						<p>Create automatic trade rules such as Stop-Loss and Price Limit
-							and mitigate Bitcoin mraket price volatility</p>
+							to mitigate Bitcoin price volatility</p>
 						<p>
 							<a class="btn btn-lg btn-primary" href="coming-soon.html"
 								role="button">Sign Up</a>
@@ -116,12 +117,12 @@
 				</div>
 			</div>
 			<div class="item">				
-				<img src="images/wood2.jpg" alt="Bitrule Bubbles"
+				<img src="images/blue.jpg" alt="Bitrule Bubbles"
 					class="image-responsive">
 				<div class="container">
 					<div class="carousel-caption">
-						<h1>Outsmart The Market</h1>
-						<p>Place trade orders even when you are away from the market
+						<h0>Outsmart The Market</h0>
+						<p>Trade even when you are away from the market
 							and stay ahead of the other traders.</p>
 						<p>
 							<a class="btn btn-lg btn-primary" href="coming-soon.html"
@@ -131,12 +132,12 @@
 				</div>
 			</div>
 			<div class="item">
-				<img src="images/wood3.jpg" alt="Bitrule Rain"
+				<img src="images/grey.jpg" alt="Bitrule Rain"
 					class="image-responsive">				
 				<div class="container">
 					<div class="carousel-caption">
-						<h1>Reliable</h1>
-						<p>Bitrule runs over Google Cloud and provides 
+						<h0>Reliable</h0>
+						<p>Bitrule runs on Google Cloud and provides 
 						   the most reliable service in the market. No application or plugin installation needed.</p>
 						<p>
 							<a class="btn btn-lg btn-primary" href="coming-soon.html"
@@ -167,7 +168,7 @@
 				<img src="images/International-projects140-1.gif"
 					alt="International Market Support" width="140" height="140">				
 				<h2>Cross Market</h2>				
-				<p>Define and apply simple auto-trade rules to any of the major bitcoin
+				<p>Define and apply simple auto-trade rules for any of the major bitcoin
 					exchanges. MtGox, Bitstamp, BTC China and more. Protect yourself from sudden
 					market price drops and profit from price spikes.</p>				
 				<p>
@@ -182,8 +183,7 @@
 				<h2>Secure</h2>
 				<p>Bitrule does not store any of your
 					personal information, instead we use custom API's to connect you to your exchanges. 
-					In addition, our service does not allow placing withdrawl orders in
-					your exchange accounts.
+					Bitrule does not hold or have direct access to your bitcoins or hard currency, 
 				</p>
 				<p>
 					<a class="btn btn-lg btn-primary" href="about/about-security.html"
@@ -194,9 +194,9 @@
 			<div class="col-lg-4">
 				<img src="images/simple1.gif" alt="Simple" width="140" height="140">
 				<h2>Simple</h2>
-				<p>Bitrule runs over Google Cloud. That means no application or
+				<p>Bitrule runs on Google Cloud. This means no application or
 				browser plugin installation is needed. Simply log in to your online account
-				and begin setting auto-trade rules in any of your exchange accounts.
+				and begin placing auto-trade rules for any of your exchange accounts.
 				</p>
 				<p>
 					<a class="btn btn-lg btn-primary" href="about/about-cloud.html"
@@ -219,7 +219,7 @@
 					So Simple <span class="text-muted">It'll blow your mind.</span>
 				</h2>
 				<p class="lead">Create automatic trade rules such as Stop-Loss, Stop-Limit and more 
-					and manage your trade risks.</p>
+					and mitigate your trade risks.</p>
 			</div>
 			<div class="col-md-5">
 				<img src="images/bitcoin.jpg" alt="Easy" class="image-responsive">
@@ -230,7 +230,7 @@
 
 		<div class="row featurette">
 			<div class="col-md-5">				
-				<img src="images/secure2.jpg" alt="Secure Service"
+				<img src="images/secure2.png" alt="Secure Service"
 					class="image-responsive">
 			</div>
 			<div class="col-md-7">
@@ -238,7 +238,7 @@
 					Protect your investment securely. <span class="text-muted">Mitigate your risk.</span>
 				</h2>
 				<p class="lead">Bitrule does not store any of your personal
-					data, and does not allow to place withdrawl orders in your bitcoin exchange accounts.</p>
+					data and does not hold or have direct access to your bitcoins or hard currency.</p>
 			</div>
 		</div>
 
@@ -247,14 +247,14 @@
 		<div class="row featurette">
 			<div class="col-md-7">
 				<h2 class="featurette-heading">
-					And lastly, Bitrule runs over Google Cloud service. We're always
+					Lastly, Bitrule runs on Google Cloud service. We're always
 					up. <span class="text-muted">Checkmate.</span>
 				</h2>
 				<p class="lead">We deliver the most reliable service in the
 					market. Furthermore, No application download or browser plugin installation is needed.</p>
 			</div>
 			<div class="col-md-5">
-				<img src="images/Cloud1.png" alt="Cloud Service"
+				<img src="images/cloud1.png" alt="Cloud Service"
 					class="image-responsive">				
 			</div>
 		</div>
