--- a/hp/WebContent/landing/about/about-cloud.html
+++ b/hp/WebContent/landing/about/about-cloud.html
@@ -54,11 +54,11 @@
 								class="icon-bar"></span> <span class="icon-bar"></span> <span
 								class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="#" style="color: White;">Bitrule</a>
+						<a class="navbar-brand" href="../homepage.html"><img style="max-width:90px; margin-top: -15px;" src="../images/logo.jpg"></a>
 					</div>
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav">
-							<li><a href="../HomePage.html">Home</a></li>
+							<li><a href="../homepage.html">Home</a></li>
 							<li class="dropdown"><a href="#" class="dropdown-toggle"
 								data-toggle="dropdown">About <b class="caret"></b></a>
 								<ul class="dropdown-menu" style="background-color: #dddddd;">
@@ -101,12 +101,12 @@
 				<h2>It's all about Reliability</h2>
 			</div>
 			<div class="panel-body text-center">
-				<p>Bitrule runs over Google Cloud services and shares all
-					the advantages the Cloud has to offer. Bitrule is
-				    the most reliable service in the market, providing more
+				<p>Bitrule runs on Google Cloud services and shares all
+					the advantages that the Cloud has to offer. Bitrule is
+				  the most reliable service in the market, providing more
 					than 99.9% up time, protection from DDOS attacks, local network
 					failure and power outages. Further more, because Bitrule
-					doen't require a local client on your computer, even in
+					doesn't require a local client on your computer, even in
 					case of a computer crash event, Bitrule is still up and running. We
 					pride ourselves with providing our customers with the best possible
 					solution and most reliable service technically possible.</p>
@@ -123,7 +123,7 @@
 			<li class="active"><a href="#">Cloud Service</a></li>
 			<li><a href="about-security.html">Security</a></li>
 			<li><a href="about-us.html">About Us</a></li>
-			<li><a href="../HomePage.html">Home</a></li>
+			<li><a href="../homepage.html">Home</a></li>
 		</ul>
 
 		<!-- FOOTER -->
