--- a/hp/WebContent/landing/about/about-how-it-works.html
+++ b/hp/WebContent/landing/about/about-how-it-works.html
@@ -54,11 +54,11 @@
 								class="icon-bar"></span> <span class="icon-bar"></span> <span
 								class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="#" style="color: White;">Bitrule</a>
+						<a class="navbar-brand" href="../homepage.html"><img style="max-width:90px; margin-top: -15px;" src="../images/logo.jpg"></a>
 					</div>
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav">
-							<li><a href="../HomePage.html">Home</a></li>
+							<li><a href="../homepage.html">Home</a></li>
 							<li class="dropdown"><a href="#" class="dropdown-toggle"
 								data-toggle="dropdown">About <b class="caret"></b></a>
 								<ul class="dropdown-menu" style="background-color: #dddddd;">
@@ -101,12 +101,17 @@
 				<h2>Designed to be Easy</h2>
 			</div>
 			<div class="panel-body text-center">
-				<p>With Bitrule, you can define and place auto-trade rules in any
-					of the major bitcoin exchanges. With just a few
-					intuitive clicks you can place Stop-Loss, Limit Buy\Sell and other orders.
-				    Manage your risks in case of violent market price flctuations and maximize profits from price spikes. 
-				    You can rest easy and know that even when you are away from the market, 
-				    Bitrule will activate your trade triggers according to your definitions.</p>
+				<p>Bitrule connects you your exchange accounts using custom exchange API's and
+            does not hold any of your bitcoins or hard currency nor does it have direct access to them.
+            As an added layer of security, Bitrule does not allow withdrawing funds from your
+            exchange accounts. 
+            With Bitrule, you can define and place auto-trade rules in any
+					  of the major bitcoin exchanges. With just a few
+					  intuitive clicks you can place Stop-Loss, Limit Buy\Sell and other orders.
+				    Mitigate your risk in case of market price flctuations and maximize profits from price spikes. 
+				    You can rest easy knowing that even when you are away from the market, 
+				    Bitrule will activate your trade triggers according to your definitions.
+            </p>
 			</div>
 		</div>
 		<!--/span-->
@@ -118,7 +123,7 @@
 			<li><a href="about-cloud.html">Cloud Service</a></li>
 			<li><a href="about-security.html">Security</a></li>
 			<li><a href="about-us.html">About Us</a></li>
-			<li><a href="../HomePage.html">Home</a></li>
+			<li><a href="../homepage.html">Home</a></li>
 		</ul>
 
 		<!-- FOOTER -->
