--- a/hp/WebContent/landing/privacy-policy.html
+++ b/hp/WebContent/landing/privacy-policy.html
@@ -47,11 +47,11 @@
 								class="icon-bar"></span> <span class="icon-bar"></span> <span
 								class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="#" style="color: White;">Bitrule</a>
+						<a class="navbar-brand" href="homepage.html"><img style="max-width:90px; margin-top: -15px;" src="images/logo.jpg"></a>
 					</div>
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav">
-							<li><a href="HomePage.html">Home</a></li>
+							<li><a href="homepage.html">Home</a></li>
 							<li class="dropdown"><a href="#" class="dropdown-toggle"
 								data-toggle="dropdown">About <b class="caret"></b></a>
 								<ul class="dropdown-menu" style="background-color: #dddddd;">
@@ -130,7 +130,7 @@ By using this Site, you signify your acceptance of this policy and <a href="/ter
 If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please contact us at:<br>
 <a href="#">Bitrule LLC 2013</a><br>
 <a href="#">bitrule.com</a><br>
-joomankay@hotmail.com<br>
+admin@bitrule.com <br>
 <br>
 This document was last updated on December 30, 2013<br><br>
 
