--- a/hp/WebContent/landing/contact-us.html
+++ b/hp/WebContent/landing/contact-us.html
@@ -13,7 +13,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="shortcut icon" href="../favicon.ico">
+<link rel="shortcut icon" href="favicon.ico">
 
 <title>Bitrule About Us</title>
 <!-- Bootstrap core CSS -->
