--- a/hp/WebContent/landing/homepage.html
+++ b/hp/WebContent/landing/homepage.html
@@ -15,7 +15,7 @@
 <meta name="author" content="">
 <link rel="shortcut icon" href="favicon.ico">
 
-<title>Bitrule HomePage</title>
+<title>Bitrule</title>
 
 <!-- Bootstrap core CSS -->
 <link href="css/bootstrap.css" rel="stylesheet">
