--- a/hp/WebContent/landing/about/about-bitrule.html
+++ b/hp/WebContent/landing/about/about-bitrule.html
@@ -15,7 +15,7 @@
 <meta name="author" content="">
 <link rel="shortcut icon" href="../favicon.ico">
 
-<title>Bitrule General</title>
+<title>Bitrule About</title>
 <!-- Bootstrap core CSS -->
 <link href="../css/bootstrap.css" rel="stylesheet">
 
