changed lock images + small text edit

--- a/hp/WebContent/landing/about/about-how-it-works.html
+++ b/hp/WebContent/landing/about/about-how-it-works.html
@@ -102,9 +102,9 @@
 			</div>
 			<div class="panel-body text-center">
 				<p>Bitrule connects you your exchange accounts using custom exchange API's and
-            does not hold any of your bitcoins or hard currency nor does it have direct access to them.
-            As an added layer of security, Bitrule does not allow withdrawing funds from your
-            exchange accounts. 
+            <b>does not hold or have direct access to your bitcoins or hard currency</b>.
+            As an added layer of security, Bitrule does not supply a method for withdrawing funds from your
+            exchange accounts. This we leave to you. 
             With Bitrule, you can define and place auto-trade rules in any
 					  of the major bitcoin exchanges. With just a few
 					  intuitive clicks you can place Stop-Loss, Limit Buy\Sell and other orders.
