--- a/hp/WebContent/landing/about/about-security.html
+++ b/hp/WebContent/landing/about/about-security.html
@@ -102,12 +102,12 @@
 			</div>
 			<div class="panel-body text-center">
 				<p>When working in the Bitcoin eco-system, you have to be
-					careful. Bitrule uses API keys of your exchanges, and <b>DOES NOT</b>
-					require you to submit your personal exchange login information. A new API key can be set from the
-					"Security Center" panel in your MtGox or Bitstamp or other exchange
-					account. Bitrule does not store or share any of your personal data and does not hold
-          any of your bitcoins or hard currency nor does it have direct access to them. 
-          As an added layer of security, Bitrule does not allow withdrawing funds from your
+					careful. Bitrule uses API keys of your exchanges, and <b>DOES NOT
+					require you to submit your personal exchange login information</b>. A new API key can be set from the
+					"Security Center" panel in your MtGox, Bitstamp, BTCE or other exchange
+					account. Bitrule does not store or share any of your personal data and <b>does not hold
+          any of your bitcoins or hard currency nor does it have direct access to them</b>. 
+          As an added layer of security, Bitrule does not supply a method for withdrawing funds from your
           exchange accounts. We believe that safety comes first.</p>
 			</div>
 		</div>
