--- a/hp/WebContent/landing/homepage.html
+++ b/hp/WebContent/landing/homepage.html
@@ -137,8 +137,8 @@
 				<div class="container">
 					<div class="carousel-caption">
 						<h0>Reliable</h0>
-						<p>Bitrule runs on Google Cloud and provides 
-						   the most reliable service in the market. No application or plugin installation needed.</p>
+						<p>Bitrule runs on Google Cloud so 
+						   no application or plugin installation is needed.</p>
 						<p>
 							<a class="btn btn-lg btn-primary" href="coming-soon.html"
 								role="button">Sign Up</a>
@@ -219,7 +219,7 @@
 					So Simple <span class="text-muted">It'll blow your mind.</span>
 				</h2>
 				<p class="lead">Create automatic trade rules such as Stop-Loss, Stop-Limit and more 
-					and mitigate your trade risks.</p>
+					to mitigate your trade risks.</p>
 			</div>
 			<div class="col-md-5">
 				<img src="images/bitcoin.jpg" alt="Easy" class="image-responsive">
@@ -250,8 +250,8 @@
 					Lastly, Bitrule runs on Google Cloud service. We're always
 					up. <span class="text-muted">Checkmate.</span>
 				</h2>
-				<p class="lead">We deliver the most reliable service in the
-					market. Furthermore, No application download or browser plugin installation is needed.</p>
+				<p class="lead">Furthermore, no application download or browser plugin installation is needed. 
+        We deliver the most reliable service in the market. </p>
 			</div>
 			<div class="col-md-5">
 				<img src="images/cloud1.png" alt="Cloud Service"
