--- a/hp/WebContent/landing/coming-soon.html
+++ b/hp/WebContent/landing/coming-soon.html
@@ -54,7 +54,7 @@
 								class="icon-bar"></span> <span class="icon-bar"></span> <span
 								class="icon-bar"></span>
 						</button>
-							<a class="navbar-brand" href="homepage.html"><img style="max-width:90px; margin-top: -15px;" src="images/logo.jpg"></a>
+							<a class="navbar-brand" href="homepage.html"><img style="max-width:90px; margin-top: -15px;" src="images/logo.png"></a>
 					</div>
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav">
