--- a/hp/WebContent/landing/wireframe/help.html
+++ b/hp/WebContent/landing/wireframe/help.html
@@ -176,7 +176,7 @@
         <div class="accordion-group">
             <div class="accordion-heading">
                 <a href="#collapseOne" data-parent="#myAccordion" data-toggle="collapse" 
-                class="accordion-toggle">1.What are the different order types?</a>
+                class="accordion-toggle">1. What are the different order types?</a>
             </div>
             <div class="accordion-body collapse" id="collapseOne">
                 <div class="accordion-inner">
@@ -189,7 +189,7 @@
                 <a href="#collapseTwo" data-parent="#myAccordion" data-toggle="collapse" 
                 class="accordion-toggle">2. How do I connect my bitrule account to my exchage accounts?</a>
             </div>
-            <div class="accordion-body collapse in" id="collapseTwo">
+            <div class="accordion-body collapse" id="collapseTwo">
                 <div class="accordion-inner">
                     <p>Catch a fly by its balls and then ask us again.</a></p>
                 </div>
