--- a/hp/WebContent/landing/wireframe/mainpage.html
+++ b/hp/WebContent/landing/wireframe/mainpage.html
@@ -227,9 +227,9 @@
             <th width="10%">Alert me</th>
             <th width="10%">Price Alert</th>
             <th width="10%">-----</th>
-            <th width="30%">Alert me at $10</th> 
+            <th width="30%">Alert me at $650</th> 
             <th width="10%"><span class="glyphicon glyphicon-envelope"></span> <span class="glyphicon glyphicon-phone"></span></th> 
-            <th width="10%">Active</th>            
+            <th width="10%">Open</th>            
             <th width="3%"<li data-toggle="modal" data-target="#disableModal"><a href="#"><span <span class="glyphicon glyphicon-off"></span></th>
             <th width="3%"<li data-toggle="modal" data-target="#editModal"><a href="#"><span class="glyphicon glyphicon-edit"></span></a></li></th>            
             <th width="3%"<li><a href="#"><span class="glyphicon glyphicon-trash"></span></a></li></th>
@@ -239,10 +239,22 @@
             <th width="10%">BTC-e</th>
             <th width="10%">Buy</th>
             <th width="10%">Stop Limit </th>
-            <th width="10%">50 BC</th>
-            <th width="20%">Buy 50 Stop at $12 Limit at $12.4</th> 
+            <th width="10%">$500</th>
+            <th width="20%">Buy $500 Stop at $700 Limit at $720</th> 
             <th width="10%"><span class="glyphicon glyphicon-envelope"></span></th>
-             <th width="10%">Active</th>           
+             <th width="10%">Open</th>           
+            <th width="3%"<li data-toggle="modal" data-target="#disableModal"><a href="#"><span <span class="glyphicon glyphicon-off"></span></th>
+            <th width="3%"<li data-toggle="modal" data-target="#editModal"><a href="#"><span class="glyphicon glyphicon-edit"></span></a></li></th>
+            <th width="3%"<li><a href="#"><span class="glyphicon glyphicon-trash"></span></a></li></th>           
+        </tr> 
+        <tr class="text-success">
+            <th width="10%">BTC-e</th>
+            <th width="10%">Sell</th>
+            <th width="10%">Stop Loss </th>
+            <th width="10%">4 BC</th>
+            <th width="20%">Sell 4BC Stop at $750</th> 
+            <th width="10%"><span class="glyphicon glyphicon-envelope"></span></th>
+             <th width="10%">Open</th>           
             <th width="3%"<li data-toggle="modal" data-target="#disableModal"><a href="#"><span <span class="glyphicon glyphicon-off"></span></th>
             <th width="3%"<li data-toggle="modal" data-target="#editModal"><a href="#"><span class="glyphicon glyphicon-edit"></span></a></li></th>
             <th width="3%"<li><a href="#"><span class="glyphicon glyphicon-trash"></span></a></li></th>           
@@ -255,7 +267,7 @@
             <th width="10%">Sell</th>
             <th width="10%">Stop Loss</th>
             <th width="10%">100 BC</th>
-            <th width="20%">Sell 100 Stop at $10</th> 
+            <th width="20%">Sell 100BC Stop at $750</th> 
             <th width="10%"><span class="glyphicon glyphicon-phone"></span></th>
              <th width="10%">Disabled</th>            
             <th width="3%"<li data-toggle="modal" data-target="#enableModal"><a href="#"><span class="glyphicon glyphicon-off"></span></th>
