changed favicon to black

--- a/hp/WebContent/landing/wireframe/mainpage.html
+++ b/hp/WebContent/landing/wireframe/mainpage.html
@@ -160,7 +160,7 @@
                                             <td>Sell</td>
                                             <td>Stop Limit</td>
                                             <td class="center">45 BC</td>
-                                            <td>Sell 45 BC stop %650 limit $645</td>
+                                            <td>Sell 45 BC stop $650 limit $645</td>
                                             <td><span class="glyphicon glyphicon-envelope"></span> <span class="glyphicon glyphicon-phone"></span></td>
                                             <td class="text-danger"><b>Disabled</b></td>
                                             <td <li data-toggle="modal" data-target="#enableModal"><a href="#"><span class="glyphicon glyphicon-off"></span></td>
@@ -232,7 +232,7 @@
                                             <td>Sell</td>
                                             <td>Stop Limit</td>
                                             <td class="center">45 BC</td>
-                                            <td>Sell 45 BC stop %650 limit $645</td>
+                                            <td>Sell 45 BC stop $650 limit $645</td>
                                             <td><span class="glyphicon glyphicon-envelope"></span> <span class="glyphicon glyphicon-phone"></span></td>
                                             <td class="text-danger"><b>Disabled</b></td>
                                             <td <li data-toggle="modal" data-target="#enableModal"><a href="#"><span class="glyphicon glyphicon-off"></span></td>
@@ -304,7 +304,7 @@
                                             <td>Sell</td>
                                             <td>Stop Limit</td>
                                             <td class="center">45 BC</td>
-                                            <td>Sell 45 BC stop %650 limit $645</td>
+                                            <td>Sell 45 BC stop $650 limit $645</td>
                                             <td><span class="glyphicon glyphicon-envelope"></span> <span class="glyphicon glyphicon-phone"></span></td>
                                             <td class="text-danger"><b>Disabled</b></td>
                                             <td <li data-toggle="modal" data-target="#enableModal"><a href="#"><span class="glyphicon glyphicon-off"></span></td>
@@ -376,7 +376,7 @@
                                             <td>Sell</td>
                                             <td>Stop Limit</td>
                                             <td class="center">45 BC</td>
-                                            <td>Sell 45 BC stop %650 limit $645</td>
+                                            <td>Sell 45 BC stop $650 limit $645</td>
                                             <td><span class="glyphicon glyphicon-envelope"></span> <span class="glyphicon glyphicon-phone"></span></td>
                                             <td class="text-danger"><b>Disabled</b></td>
                                             <td <li data-toggle="modal" data-target="#enableModal"><a href="#"><span class="glyphicon glyphicon-off"></span></td>
