--- a/hp/WebContent/contact-us.html
+++ b/hp/WebContent/contact-us.html
@@ -13,15 +13,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="shortcut icon" href="../favicon.ico">
+<link rel="shortcut icon" href="favicon.ico">
 
-<title>Bitrule Secure</title>
+<title>Bitrule About Us</title>
 <!-- Bootstrap core CSS -->
-<link href="../css/bootstrap.min.css" rel="stylesheet">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<!-- link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" -->
 
 
 <!-- Custom styles for this template -->
-<link href="../css/bitrule.css" rel="stylesheet">
+<link href="css/bitrule.css" rel="stylesheet">
 <!-- Google Analytics -->
 	<script type="text/javascript">
   var _gaq = _gaq || [];
@@ -54,26 +55,26 @@
 								class="icon-bar"></span> <span class="icon-bar"></span> <span
 								class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="../homepage.html"><img style="max-width:90px; margin-top: -15px;" src="../images/logo.png"></a>
+					<a class="navbar-brand" href="homepage.html"><img style="max-width:90px; margin-top: -15px;" src="images/logo.png"></a>
 					</div>
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav">
-							<li><a href="../homepage.html">Home</a></li>
+							<li><a href="homepage.html">Home</a></li>
 							<li class="dropdown"><a href="#" class="dropdown-toggle"
 								data-toggle="dropdown">About <b class="caret"></b></a>
 								<ul class="dropdown-menu" style="background-color: #dddddd;">
-									<li><a href="#">About Bitrule</a></li>
-									<li><a href="about-how-it-works.html">How it works</a></li>
-									<li><a href="about-cloud.html">Bitrule Cloud Service</a></li>
-									<li><a href="about-security.html">Bitrule Security</a></li>
-									<li><a href="about-us.html">About Us</a></li>
+									<li><a href="about/about-bitrule.html">About Bitrule</a></li>
+									<li><a href="about/about-how-it-works.html">How it works</a></li>
+									<li><a href="about/about-cloud.html">Bitrule Cloud Service</a></li>
+									<li><a href="about/about-security.html">Bitrule Security</a></li>
+									<li><a href="about/about-us.html">About Us</a></li>
 								</ul></li>
 							<li><a target="_blank" href="http://bitcoinity.org/markets">Charts</a></li>
-							<li><a href="../contact-us.html">Contact Us</a></li>
+							<li><a href="#">Contact Us</a></li>
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
-							<li><a href="../coming-soon.html">Register</a></li>
-							<li><a href="../coming-soon.html">Sign In</a></li>
+							<li><a href="coming-soon.html">Register</a></li>
+							<li><a href="coming-soon.html">Sign In</a></li>
 							
 						</ul>
 					</div>
@@ -89,7 +90,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1">
-						<h1>Bitrule is Secure!</h1>
+						<h1>Contact Us</h1>
 					</div>
 				</div>
 			</div>
@@ -97,31 +98,16 @@
 		</div>
 		<div class="panel panel-default">
 			<!-- Default panel contents -->
-			<div class="panel-heading text-center" style="background-color: #BAE0FF;">
-				<h2>We respect your Privacy</h2>
-			</div>
-			<div class="panel-body text-center">
-				<p>When working in the Bitcoin eco-system, you have to be
-					careful. Bitrule uses API keys of your exchanges, and <b>DOES NOT
-					require you to submit your personal exchange login information</b>. A new API key can be set from the
-					"Security Center" panel in your MtGox, Bitstamp, BTCE or other exchange
-					account. Bitrule does not store or share any of your personal data and <b>does not hold
-          any of your bitcoins or hard currency nor does it have direct access to them</b>. 
-          As an added layer of security, Bitrule does not supply a method for withdrawing funds from your
-          exchange accounts. We believe that safety comes first.</p>
+			<div class="panel-body text-center" style="background-color: #BAE0FF;">
+				<p><br>
+          <a href="#">Bitrule LLC 2013</a><br>
+          <a href="#">bitrule.com</a><br>
+          <br>
+          admin@bitrule.com <br>
+          <br></p>
 			</div>
 		</div>
 
-		<!--/span-->
-		<!--/row-->
-		<ul class="nav nav-pills">
-			<li><a href="about-bitrule.html">General</a></li>
-			<li><a href="about-how-it-works.html">How it works</a></li>
-			<li><a href="about-cloud.html">Cloud Service</a></li>
-			<li class="active"><a href="#">Security</a></li>
-			<li><a href="about-us.html">About Us</a></li>
-			<li><a href="../homepage.html">Home</a></li>
-		</ul>
 
 		<!-- FOOTER -->
 		<footer id="offCanvasFooter">
@@ -131,25 +117,26 @@
 				<a href="#">Back to top</a>
 			</p>
 			<p>
-				&copy; 2013 Company, Inc. &middot; <a href="../privacy-policy.html">Privacy</a> &middot;
-				<a href="../terms-of-service.html"> Terms of Service </a>&middot; <a href="../contact-us.html"> Contact
-					Us </a> &middot; <a href="../coming-soon.html"> Sign in </a>&middot; <a
-					href="../coming-soon.html"> Register </a>
+				&copy; 2013 Company, Inc. &middot; <a href="privacy-policy.html">Privacy</a> &middot;
+				<a href="terms-of-service.html"> Terms of Service </a>&middot; <a href="../contact-us.html"> Contact
+					Us </a> &middot; <a href="coming-soon.html"> Sign in </a>&middot; <a
+					href="coming-soon.html"> Register </a>
 			</p>
 		</div>
 		</footer>
+
 	</div>
 	<!-- /.container -->
 
 
-
+	
 
 	<!-- Bootstrap core JavaScript
     ================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-	<script src="../js/bootstrap.min.js"></script>
-  
+	<script src="js/bootstrap.min.js"></script>
+  <!-- script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script -->
   
 </body>
 </html>
