customized footer in inner pages
used custom offCanvasFooter (bitrule.css)

--- a/hp/WebContent/help.html
+++ b/hp/WebContent/help.html
@@ -213,8 +213,8 @@
 			<li class="active"><a href="mainpage.html">Back to Home Page</a></li>
       </ul>
 </div>
-<!-- FOOTER -->
-<footer>
+    <!-- FOOTER -->
+		<footer id="offCanvasFooter">
 		<div class="container text-center">
 
 			<p>
