--- a/hp/WebContent/history.html
+++ b/hp/WebContent/history.html
@@ -357,7 +357,7 @@
   
   </div>
 		<!-- FOOTER --> 
-		<footer>
+		<footer id="offCanvasFooter">
 		<div class="container text-center">
 
 			<p class="pull-right">
