custom padding for carousel caption element
bitrule.css customization - padding currently set to 80px

--- a/hp/WebContent/homepage.html
+++ b/hp/WebContent/homepage.html
@@ -107,7 +107,7 @@
 				<div class="container">
 					<div class="carousel-caption">
 						<h0>Manage your Risk</h0>
-						<p>Create automatic trade rules such as Stop-Loss and Price Limit
+						<p>Create automatic Stop and Limit trade rules 
 							to mitigate Bitcoin price volatility</p>
 						<p>
 							<a class="btn btn-lg btn-primary" href="coming-soon.html"
@@ -122,7 +122,7 @@
 				<div class="container">
 					<div class="carousel-caption">
 						<h0>Outsmart The Market</h0>
-						<p>Trade even when you are away from the market
+						<p>Trade even when away from the market
 							and stay ahead of the other traders.</p>
 						<p>
 							<a class="btn btn-lg btn-primary" href="coming-soon.html"
@@ -250,7 +250,7 @@
 					Lastly, Bitrule runs on Google Cloud service. We're always
 					up. <span class="text-muted">Checkmate.</span>
 				</h2>
-				<p class="lead">Furthermore, no application download or browser plugin installation is needed. 
+				<p class="lead">No application download or browser plugin installation is needed. 
         We deliver the most reliable service in the market. </p>
 			</div>
 			<div class="col-md-5">
