carousel caption editing
shortening of captions + edit

--- a/hp/WebContent/homepage.html
+++ b/hp/WebContent/homepage.html
@@ -121,9 +121,9 @@
 					class="image-responsive">
 				<div class="container">
 					<div class="carousel-caption">
-						<h0>Outsmart The Market</h0>
-						<p>Trade even when away from the market
-							and stay ahead of the other traders.</p>
+						<h0>Reliable</h0>
+						<p>Bitrule runs on Google Cloud so 
+						   no application or plugin installation is needed.</p>
 						<p>
 							<a class="btn btn-lg btn-primary" href="coming-soon.html"
 								role="button">Sign Up</a>
@@ -136,9 +136,9 @@
 					class="image-responsive">				
 				<div class="container">
 					<div class="carousel-caption">
-						<h0>Reliable</h0>
-						<p>Bitrule runs on Google Cloud so 
-						   no application or plugin installation is needed.</p>
+						<h0>Stay On Top</h0>
+						<p>Trade even when away from the market
+							and keep ahead of other traders.</p>
 						<p>
 							<a class="btn btn-lg btn-primary" href="coming-soon.html"
 								role="button">Sign Up</a>
