remove unused js files

--- a/hp/WebContent/homepage.html
+++ b/hp/WebContent/homepage.html
@@ -122,8 +122,7 @@
 				<div class="container">
 					<div class="carousel-caption">
 						<h0>Reliable</h0>
-						<p>Bitrule runs on Google Cloud so 
-						   no application or plugin installation is needed.</p>
+						<p>Bitrule runs on Google Cloud. No software installation is needed.</p>
 						<p>
 							<a class="btn btn-lg btn-primary" href="coming-soon.html"
 								role="button">Sign Up</a>
@@ -137,7 +136,7 @@
 				<div class="container">
 					<div class="carousel-caption">
 						<h0>Stay On Top</h0>
-						<p>Trade even when away from the market
+						<p>Activate transactions automatically
 							and keep ahead of other traders.</p>
 						<p>
 							<a class="btn btn-lg btn-primary" href="coming-soon.html"
